--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,15 @@
+version: '3.1'
 
+services:
+  db:
+    image: mysql
+    restart: always
+    container_name: database
+    environment:
+      MYSQL_ROOT_PASSWORD: Smoke123@
+  app:
+    image: cactusbank
+    restart: always
+    container_name: app
+    ports:
+    - 8080:8081
