--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,29 @@ services:
     image: mysql
     restart: always
     container_name: database
+    networks:
+      - trabalho_sd
     environment:
       MYSQL_ROOT_PASSWORD: Smoke123@
+    ports:
+      - 3306:3306
   app:
     image: cactusbank
     restart: always
+    build: .
     container_name: app
+    depends_on:
+      - db
+    networks:
+      - trabalho_sd
     ports:
-    - 8080:8081
+    - 8080:8080
+networks:
+  trabalho_sd:
+    name: trabalho_sd
+    driver: bridge
+    external: false
+    ipam:
+      config:
+        - subnet: '172.26.0.0/16'
+          gateway: '172.26.0.1'
