--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
 version: '3.1'
 
 services:
-  db:
+  mysql:
     image: mysql
     restart: always
     container_name: database
+    command: --default-authentication-plugin=mysql_native_password
     networks:
       - trabalho_sd
     environment:
-      MYSQL_ROOT_PASSWORD: Smoke123@
+      MYSQL_DATABASE: trabalho_sd
+      MYSQL_ROOT_PASSWORD: Smoke123
     ports:
-      - 3306:3306
+      - 3306:3307
   app:
     image: cactusbank
     restart: always
     build: .
     container_name: app
     depends_on:
-      - db
+      - mysql
     networks:
       - trabalho_sd
     ports:
